[package]
name = "vento"
version = "1.0.0"
edition = "2021"
readme = "README.md"

description = "A CLI inventory for your files"
authors = ["Lux Aliaga <they@mint.lgbt>"]
repository = "https://codeberg.org/nixgoat/vento"

license = "GPL-3.0-or-later"
keywords = ["utility", "file-manager", "inventory"]
categories = ["command-line-utilities", "filesystem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
colored = "2.0.0"
fs_extra = "1.2.0"
anyhow = "1.0.65"
size_format = "1.0.2"
clap = "3.2.22"
clap_mangen = "0.1.11"
