[package]
name = "vento"
version = "1.4.0-alpha"
edition = "2021"
readme = "README.md"

description = "A CLI inventory for your files"
authors = ["Lux Aliaga <lux@nixgoat.me>"]
repository = "https://git.sr.ht/~nixgoat/vento"

license = "GPL-3.0-or-later"
keywords = ["utility", "file-manager", "inventory"]
categories = ["command-line-utilities", "filesystem"]

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
colored = "2"
fs_extra = "1.3"
anyhow = "1.0"
size_format = "1.0.2"
config = "0.13"
xz2 = "0.1"
tar = "0.4"
clap = { version = "4.3.23", features = ["derive"] }
serde = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4"
termion = "3.0.0"

[build-dependencies]
man = "0.3.0"
anyhow = "1.0.65"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
